--- a/build.gradle
+++ b/build.gradle
@@ -3,15 +3,15 @@ plugins {
 }
 
 group 'ENCO'
-version '1.0-SNAPSHOT'
+version '1.0'
 
 sourceCompatibility = 1.8
 
-task client(type: Jar) {
+task busqueda(type: Jar) {
     manifest {
         attributes 'Implementation-Title': 'BuscaTabu',
-                'Implementation-Version': version,
-                'Main-Class': 'Main'
+                'Main-Class': 'Main',
+                'Implementation-Version': version
     }
     baseName = 'BuscaTabu'
     from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
